welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: not enough arguments for method apply: (i: Int)java.awt.Color in class Array.
Unspecified value parameter i.
  return tab()
            ^Array1:15: error: not enough arguments for method apply: (i: Int)java.awt.Color in class Array.
Unspecified value parameter i.
  return tab()
            ^Array1:15: warning: enclosing method motif has result type Unit: return value discarded
  return tab()
  ^